<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TextView
        android:id="@+id/ticket"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:text="@string/ticket"
        android:textSize="23sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#2196E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/dataMainActivity"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:background="#EEF3F6"
        android:gravity="center"
        android:hint="@string/data"
        android:textColor="#2196E4"
        android:textColorHint="#0091EA"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket" />
    <Button
        android:id="@+id/restart"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#2196E4"
        android:text="@string/restart"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataMainActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>